--- a/styles/giftcard.css
+++ b/styles/giftcard.css
@@ -1,6 +1,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&display=swap');
 
+html {
+	scroll-behavior: smooth;
+}
 
 * {
     padding: 0;
