--- a/styles/home.css
+++ b/styles/home.css
@@ -115,6 +115,11 @@ button{
   width: 100%;
 }
 
+.container-3{
+  height: 100vh;
+  width: 100vw;
+}
+
 #carouselExampleIndicators{
   height: 100vh;
   width: 100vw;
@@ -398,4 +403,222 @@ Detail
 .page-1{
   background-image: url(https://stories.starbucks.com/_next/image/?url=https%3A%2F%2Fstories.starbucks.com%2Fuploads%2F2023%2F12%2FStarbucks-Winter-Menu-2024.png&w=1920&q=75);
   background-size: cover;
+}
+
+.footer {
+  width: 100vw;
+  background-color: #F7F7F7;
+}
+
+.footer-line {
+  height: 10%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: grey;
+  margin-bottom: 0;
+  padding: 10px;
+}
+
+.footer-apps {
+  display: flex;
+  gap: 40px;
+}
+
+.fa-brands {
+  color: black;
+  font-size: 20px;
+  padding: 0px 20px;
+}
+
+.footer-main {
+  height: 90%;
+  width: 100%;
+  background-image: url(https://scontent.fhan5-9.fna.fbcdn.net/v/t1.15752-9/372695619_649657283923814_2764950344392574399_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=ae9488&_nc_ohc=zCAMR2j3ntUAX_o_xff&_nc_ht=scontent.fhan5-9.fna&oh=03_AdT8hjrDx4BSl-5_BhMr7aVCdoLqG_IkxOnJ6f3C1tjKYw&oe=651D51C4);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  padding: 50px 20px;
+}
+
+.footer-title {
+  height: 5%;
+  width: 100%;
+  font-size: 25px;
+  font-weight: 600;
+  color: black;
+  padding-left: 15px;
+  margin-bottom: 30px;
+}
+
+.footer-col-1 {
+  height: 100%;
+  width: 36%;
+}
+
+.footer-main1-box1 {
+  height: 7%;
+  width: 100%;
+  display: flex;
+}
+
+.footer-main1-icon {
+  height: 100%;
+  width: 13%;
+  display: flex;
+  justify-content: center;
+  font-size: 20px;
+}
+
+.bi-geo-alt-fill {
+  padding-top: 5px;
+}
+
+.bi-telephone-fill {
+  padding-top: 10px;
+}
+
+.bi-envelope {
+  padding-top: 10px;
+}
+
+.footer-main1-infor1 {
+  height: 100%;
+  width: 70%;
+  font-size: 16px;
+  color: black;
+  padding-top: 5px;
+}
+
+.footer-main1-box2 {
+  height: 10%;
+  width: 100%;
+  display: flex;
+}
+
+.footer-main1-infor2 {
+  height: 100%;
+  width: 70%;
+  font-size: 16px;
+  color: black;
+  padding-top: 5px;
+}
+
+.footer-main1-box3 {
+  height: 7%;
+  width: 100%;
+  display: flex;
+}
+
+.footer-main1-infor3 {
+  height: 100%;
+  width: 70%;
+  font-size: 16px;
+  color: black;
+  padding-top: 5px;
+}
+
+.footer-col-2 {
+  height: 100%;
+  width: 37%;
+}
+
+.footer-main2-box {
+  width: 100%;
+  height: 25%;
+  margin-top: 25px;
+  padding-left: 15px;
+}
+
+.footer-main2-ques {
+  height: 40%;
+  width: 100%;
+  font-size: 17px;
+  font-weight: 600;
+  color: black;
+}
+
+.footer-main2-ans {
+  height: 45%;
+  width: 100%;
+  color: black;
+  font-weight: 400;
+}
+
+.footer-main2-date {
+  height: 10%;
+  width: 100%;
+  color: black;
+}
+
+.footer-col-3 {
+  height: 100%;
+  width: 38%;
+}
+
+.footer-main3-box {
+  width: 100%;
+  height: 27%;
+  margin-top: 25px;
+  padding-left: 15px;
+}
+
+.footer-main3-heading {
+  display: flex;
+  color: black;
+}
+
+.footer-main3-icon {
+  height: 100%;
+  width: 15%;
+  color: black;
+}
+
+.footer-main3-title1 {
+  height: 100%;
+  width: 50%;
+  text-align: center;
+  color: black;
+}
+
+.footer-main3-title2 {
+  height: 100%;
+  width: 30%;
+  color: black;
+}
+
+.footer-main3-text {
+  height: 70%;
+  width: 100%;
+  padding-left: 15%;
+  color: black;
+}
+
+.bi-lightning-charge-fill {
+  color: yellow;
+}
+
+.fade {
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
+
+.fade.in {
+  opacity: 1;
+}
+
+.list-drinks {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.drink-item {
+  width: 50%;
+  height: 150px;
+  background-color: aliceblue;
 }
