--- a/styles/home.css
+++ b/styles/home.css
@@ -2,6 +2,8 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: 'Nunito', sans-serif;
+
 }
 
 html {
@@ -20,10 +22,12 @@ body::-webkit-scrollbar {
 }
 
 .navigation {
-  height: 10%;
   width: 100%;
   background-color: white;
   display: flex;
+  padding: 20px 0 ;
+  box-shadow: 0 1px 3px rgba(0,0,0,.1), 0 2px 2px rgba(0,0,0,.06), 0 0 2px rgba(0,0,0,.07);
+  font-weight: 700;
 }
 
 .symbol {
