--- a/styles/detail.css
+++ b/styles/detail.css
@@ -1,13 +1,15 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-  }
-  
-  html {
-      scroll-behavior: smooth;
-  }
-  
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: SoDoSans, Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-family: "Nunito", sans-serif;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 
   
   
@@ -27,18 +29,23 @@
     padding: 0 60px;
   }
   .navigation {
-    height: 10%;
     width: 100%;
     background-color: white;
     display: flex;
+    padding: 10px 30px;
+    box-shadow: 0 1px 3px rgba(0,0,0,.1), 0 2px 2px rgba(0,0,0,.06), 0 0 2px rgba(0,0,0,.07);
+    font-weight: 700;
   }
   
   .symbol {
     margin-left: 2%;
-    height: 100%;
     width: 5%;
+    padding-top: 10px;
+    height: 50px;
     background-image: url(https://i.pinimg.com/564x/14/55/09/145509e2e7c55b7ab8830545895b70c9.jpg);
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
+    display: flex;
   }
   
   .navi-1 {
@@ -46,7 +53,7 @@
     width: 35%;
     text-decoration: none;
     text-align: center;
-    padding-top: 20px;
+    padding-top: 14px;
     text-transform: uppercase;
     margin-left: 2%;
     font-size: 14px;
@@ -82,18 +89,19 @@
   }
   
   
+  
   .button{
     height: 70%;
     width: 80%;
     display:flex;
-    padding-left: 30%;
-    margin-top: 1%;
-    gap: 30px;
+    padding-left: 45%;
+    padding-top: 9px;
+    gap: 40px;
   }
   
   button{
-    padding: 10px 50px;
-    border-radius: 40%;
+    padding: 5px 1.5em;
+    border-radius: 100px;
     text-align: center;
   }
   
@@ -105,44 +113,44 @@
   .store{
     height: 100%;
     width: 20%;
+    padding-left: 30px;
   }
   .fa-solid{
     font-size: 20px;
     color: black;
     margin-top: 17px;
   }
-  
   .page-1{
     height: 100vh;
     width: 100vw;
     display: flex;
-    margin-top: 20px;
+    margin-top: 30px;
   }
   
-  .list{
+  .list {
     height: 100%;
     width: 20%;
     padding-left: 5%;
     background-size: cover;
-    
   }
   
-  .top-list{
+  .top-list {
     width: 100%;
-    font-family: SoDoSans,sans-serif;
+    font-family: SoDoSans, sans-serif;
   }
   
-  .text{
+  .text {
+    margin-top: 15px;
+    font-family: SoDoSans, sans-serif;
+     color: rgb(83, 83, 83);;
+  }
+  
+  .title {
+    margin-top: 40px;
+  }
+  
+  p {
     margin-top: 10px;
-    font-family: SoDoSans,sans-serif;
-  }
-  
-  .title{
-    margin-top: 20px;
-  }
-  
-  p{
-    margin-top: 5px;
   }
   .parents {
     height: 100%;
@@ -151,7 +159,7 @@
   }
   
   .product-list {
-    height: 100%;
+    height: 52%;
     width: 100%;
     padding-left: 100px;
   
@@ -184,6 +192,12 @@
     padding-top: 20px;
   }
   
+  hr{
+    margin-top: 10px;
+  }
+  .wrapper{
+    margin-top: 10px;
+  }
   
   
   
