--- a/styles/menu.css
+++ b/styles/menu.css
@@ -56,17 +56,20 @@ body::-webkit-scrollbar {
   width: 100%;
   background-color: white;
   display: flex;
-  padding: 20px 40px;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.06),
-    0 0 2px rgba(0, 0, 0, 0.07);
+  padding: 10px 30px;
+  box-shadow: 0 1px 3px rgba(0,0,0,.1), 0 2px 2px rgba(0,0,0,.06), 0 0 2px rgba(0,0,0,.07);
   font-weight: 700;
 }
 
 .symbol {
-  width: 50px;
+  margin-left: 2%;
+  width: 5%;
+  padding-top: 10px;
+  height: 50px;
   background-image: url(https://i.pinimg.com/564x/14/55/09/145509e2e7c55b7ab8830545895b70c9.jpg);
   background-size: contain;
   background-repeat: no-repeat;
+  display: flex;
 }
 
 .navi-1 {
@@ -74,7 +77,7 @@ body::-webkit-scrollbar {
   width: 35%;
   text-decoration: none;
   text-align: center;
-  padding-top: 20px;
+  padding-top: 14px;
   text-transform: uppercase;
   margin-left: 2%;
   font-size: 14px;
@@ -109,20 +112,47 @@ ul {
   justify-content: right;
 }
 
-.button {
-  height: 70%;
-  width: 80%;
+
+ul {
+  gap: 10px;
   display: flex;
-  padding-left: 30%;
-  margin-top: 1%;
-  gap: 30px;
+  list-style-type: none;
 }
 
-button {
-  padding: 10px 50px;
-  border-radius: 40%;
+.ar {
+  color: black;
+  text-decoration: none;
+}
+
+.ar {
+  text-decoration: none;
+  padding: 20px 30px;
+}
+
+.ar:hover {
+  background-color: black;
+  color: white;
+  padding: 20px 30px;
+}
+
+
+.button{
+  height: 70%;
+  width: 80%;
+  display:flex;
+  padding-left: 45%;
+  padding-top: 9px;
+  gap: 40px;
+}
+
+button{
+  padding: 5px 1.5em;
+  border-radius: 100px;
   text-align: center;
 }
+
+
+
 
 .signin {
   color: black;
@@ -143,7 +173,8 @@ button {
   height: 100vh;
   width: 100vw;
   display: flex;
-  margin-top: 20px;
+  margin-top: 30px;
+  
 }
 
 .list {
@@ -159,16 +190,17 @@ button {
 }
 
 .text {
-  margin-top: 10px;
+  margin-top: 15px;
   font-family: SoDoSans, sans-serif;
+   color: rgb(83, 83, 83);;
 }
 
 .title {
-  margin-top: 20px;
+  margin-top: 40px;
 }
 
 p {
-  margin-top: 5px;
+  margin-top: 10px;
 }
 .parents {
   height: 100%;
@@ -181,6 +213,13 @@ p {
   width: 100%;
   padding-left: 100px;
 
+}
+
+.product-list1{
+  height: 52%;
+  width: 100%;
+  padding-left: 100px;
+  margin-top: 30px;
 }
 
 #product-template {
@@ -201,13 +240,21 @@ img {
 
 .circle-title {
   text-align: center;
+  padding-top: 5px;
 }
 
 .wrapper{
   display: flex;
   flex-wrap: wrap;
   column-gap: 50px;
-  padding-top: 20px;
+  padding-top: 30px;
+}
+
+hr{
+  margin-top: 10px;
+}
+.wrapper{
+  margin-top: 10px;
 }
 .footer {
   width: 100vw;
