--- a/styles/home.css
+++ b/styles/home.css
@@ -710,44 +710,24 @@ Detail
   height: 150px;
   background-color: aliceblue;
 }
-body {
-  background: #eee;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  color: #000;
-  background: #404449;
-  margin: 0;
-  padding: 0;
-}
-
-.swiper-container {
-  height: calc(100vh - 120px);
-  margin: 60px;
+.swiper {
+  width: 100%;
+  height: 100%;
 }
 
 .swiper-slide {
-  overflow: hidden;
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.slide-inner {
-  position: absolute;
+.swiper-slide img {
+  display: block;
   width: 100%;
   height: 100%;
-  left: 0;
-  top: 0;
-  background-size: cover;
-  background-position: center;
+  object-fit: cover;
 }
 
-.copy {
-  position: absolute;
-  bottom: 15px;
-  left: 0;
-  right: 0;
-  text-align: center;
-  color: white;
-  letter-spacing: 0.06em;
-}
-a {
-  color: white;
-}
